<resources>
    <string name="app_name">DIDAKTIKAPP</string>

    <!-- PANATALLA MAIN-->
    <string name="btnHasi">Hasi</string>
    <string name="desc_main">GETXOKO HISTORIA ETA ONDAREAK</string>
    <string name="des_imgTx">logo Tx</string>
    <string name="des_imgUpv">logo Upv</string>
    <string name="des_text">texto main</string>
    <string name="logoapp">logo_app</string>

    <!--PANTALLA MENU MAIN-->
    <string name="text_Ibilbidea">Ibilbidea</string>
    <string name="text_Galeria">Galeria</string>
    <string name="text_Ondareak">Ondareak</string>
    <string name="title_activity_maps">Map</string>

    <!--PANTALLA GALERY-->
    <string name="SacarFoto">Sacar foto</string>
    <string name="cont_img">Sacar foto</string>

    <!--PANTALLA AJUSTES -->
    <string name="Sortzaileak">Sortzaileak</string>
    <string name="Bertsioa_egiaztatu">Bertsioa egiaztatu</string>
    <string name="Reset">Reset</string>


    <!--PANTALLA MAPA-->
    <string name="access_token" translatable="false">pk.eyJ1IjoiZGlkYWt0aWthcHAiLCJhIjoiY2pubGdlOXVpMTF3MDN3czVhNTJ4eWV2NCJ9.axDKMhplxotNcdvMT9y6dg</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="simple_offline_end_progress_success">End progress success</string>
    <string name="basic_offline_deleted_toast">Deletes toast</string>
    <string name="centrar">Centrar</string>
    <string name="sig">Sig</string>
    <string name="prev">Prev</string>

    <!--PARADAS-->
    <string name="TextView">TextView</string>
    <string name="btnNext">Next</string>

    <!--JUEGOS-->
    <!--Juego 1.1-->
    <string name="img1">img1</string>
    <string name="img2">img2</string>
    <string name="img3">img3</string>
    <string name="txtDescripcion">descrip</string>
    <!--Juego 2.1 -->
    <string name="azalpena">Konparatu argazki hauek gaur egungo zubiarekin eta bilatu desberdintasunak. Komentatu zure ikaskideekin</string>
    <!--Juego 3.1-->
    <string name="imagenjuego3">imagenJuego3</string>
    <string name="imagenboton">imagenboton</string>
    <string name="butAct">Actividades</string>
    <string name="textodistancia">Distantzia</string>
    <string name="textodestino">Helmuga</string>

    <!--Juego 2.2 galderen erantzuna-->
    <string name="kolorea">Kolore zerrenda</string>

    <!--Juego 2.3 galderen erantzuna-->
    <string name="galdera">Bizkaiko zubia ez da beltza izango arrazoi teknikoengatik. Ingeniariek aholkatzen dute beltza kolorea kentzea eguzkiare erradiazioa xurgatzen duelako, bere egitura dilatatuz. El correo 2010</string>
    <string name="aukera">Galdera Egokia aukeratu</string>
    <string name="debaterakog1">Berdintasuna zegoen gizonezko eta emakumeen artean?</string>
    <string name="debaterakog2">Giza eskubideak errespetatzen dira?</string>
    <string name="debaterakog3">Eta gaur egun berdintasuna dago?</string>
    <string name="debaterakog4">Zer gauza aldatu ahal dira berdintasunera heltzeko?</string>
    <string name="komentatu">Zure klasekideekin komenta ezazu!</string>
    <string name="respuesta_1_11">Xaboiak egiteko fabrika</string>
    <string name="respuesta_2_11">Zinema eta antzerkirako aretoa</string>
    <string name="respuesta_3_11">Arropa denda</string>
    <string name="respuesta_4_11">Liburutegia</string>
    <string name="respuesta_5_11">Merkatua</string>
    <string name="respuesta_6_11">Jolas-zentroa</string>
    <string name="textoorden">1. giza etxea, 2. zinema, 3. sutea, 4. otoitza,  5. musika</string>
    <string name="textoej15">Getxo XII. mendean eraiki zen, Andra Mariko elizaren inguruan. Arrantzaleek, euren etxeak Algorta auzoko portu txikian eraiki zituzten. Kokaleku bereziari eta hondartzei esker, etxe handiak eraikitzen hasi ziren. Hasiera batean, Areeta bihurtu zen udaleku Bilboko aristokraziaren eta goi-burgesiarentzat. XX. mendearen hasieran Neguri jaio zen, luxuzko bizitokirik famatuena. Neguri izenaren jatorria negu eta hiri hitzak lotuz sortu zen.</string>
    <string name="galdera1">1914 eta 1928an eraikina berritu eta barroko estiloa hartu zuen.</string>
    <string name="galdera2">Cisco II. eta Cisco III. ez ziren eraikin honetan oinarritu.</string>
    <string name="galdera3">Luis Arana Urigüen enpresaburu, politikari kontserbadorea eta kirolari bilbotarrak eskatuta eraiki zuten.</string>
    <string name="galdera4">Luis Aranaren laketontziek (6 metroko belaontziek) Cisco izena zuten, eta hortik dator etxearen izena</string>
    <string name="actividad7_palabra_1">Nursery</string>
    <string name="actividad7_palabra_2">Achucarro</string>
    <string name="actividad7_palabra_3">Sotoa</string>
    <string name="actividad7_palabra_5">Ingelesa</string>
    <string name="actividad7_palabra_6">Eklektikoa</string>
    <string name="actividad7_palabra_7">Smith</string>
    <string name="Sortzaileak2">Sortzaileak</string>
    <string name="Magisteritza">UPV Leioa L.H Magisteritza</string>
    <string name="Ane_arce">Ane Arce</string>
    <string name="Sheila_Aldekoa">Sheila Aldekoa</string>
    <string name="Sara_Aldekoa">Sara Aldekoa</string>
    <string name="Naroa_Da_Costa" />
    <string name="Naroa_Da_Costa1">Naroa Da Costa</string>
    <string name="Nerea_Garcia">Nerea Garcia</string>
    <string name="Haizea_Gardeazabal">Haziea Gardeazabal</string>
    <string name="Txurdinaga">FP Txurdinaga Multiplataforma</string>
    <string name="Javi">Javi Borja</string>
    <string name="Lander">Lander Arbizu</string>
    <string name="Iñaki">Iñaki Elezkano</string>
    <string name="Hizkirespuesta1">Etxeko zerbitzuetarako tokia</string>
    <string name="Hizkirespuesta2">Etxearen umeentzako zonaldea</string>
    <string name="Hizkirespuesta3">3 arkitektura estiloak</string>
    <string name="Hizkirespuesta4">"2 arkitekto garrantzitsuen abizenak    "</string>


</resources>
