<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoaplicacion"
    tools:context=".Sortzaileak">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Sortzaileak"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/Sortzaileak" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Magisteritza"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Haizea_Gardeazabal"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            tools:text="@string/Haizea_Gardeazabal" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Ane_arce"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:text="@string/Ane_arce" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Sara_Aldekoa"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:text="@string/Sara_Aldekoa" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Naroa_Da_Costa1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:text="@string/Naroa_Da_Costa1" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Nerea_Garcia"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            tools:text="@string/Nerea_Garcia" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Sheila_Aldekoa"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:text="@string/Sheila_Aldekoa" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Txurdinaga"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Lander"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            tools:text="@string/Lander" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Iñaki"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            tools:text="@string/Iñaki" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/josefin_slab_bold"
            android:text="@string/Javi"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            tools:text="@string/Javi" />
    </LinearLayout>

    <ImageView
        android:id="@+id/unilogo"
        android:layout_width="136dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/des_imgUpv"
        android:scaleType="fitXY"
        android:src="@drawable/unilogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toEndOf="@+id/txurdilogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />


    <ImageView
        android:id="@+id/txurdilogo"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="204dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/des_imgTx"
        android:scaleType="fitXY"
        android:src="@drawable/txurdilogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />
</android.support.constraint.ConstraintLayout>